Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/BoundClassError.out
BoundClassError.java:9:31: compiler.err.cant.inherit.diff.arg: java.lang.Comparable, BoundClassError, java.lang.String
1 error
